Bug 2026797 - Update status box border and header gap in VPN panel.  a=diannaS DONTBUILD
Differential Revision: https://phabricator.services.mozilla.com/D293154

--- a/browser/components/ipprotection/content/ipprotection-status-box.css
+++ b/browser/components/ipprotection/content/ipprotection-status-box.css
@@ -62,6 +62,7 @@
 #content-container {
   display: flex;
   flex-direction: column;
+  border: var(--border-width) solid var(--border-color);
   border-radius: var(--border-radius-medium);
   padding: var(--space-medium);
 }
@@ -69,6 +70,7 @@
 #header {
   display: flex;
   justify-content: space-between;
+  gap: var(--space-medium);
 }
 
 #title {
